--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BookStoreProject</string>
     <string name="default_notify_title">Thông báo</string>
     <string-array name="category_array">
-
+        <item>ALL</item>
     </string-array>
 
     <string-array name="price_filter_array">
